# exon-protein-resolver

./: .gitignore  README.md  aggr_display.ipynb  genes_tutorial.txt  pyproject.toml
data/human_gene_exons/: ENSG00000139618_exons.tsv  ENSG00000141510_exons.tsv
examples/: ENSG00000139618_exons.tsv  ENSG00000141510_exons.tsv
scripts/: fetch_isoforms.py  fetch_isoforms_hs.py
src/exon_protein_resolver.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
