[project]
name = "exon-protein-resolver"
version = "0.1.0"
description = "Fetch exon- and isoform-level annotations from Ensembl with protein mapping"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests",
    "pandas",
]

[project.scripts]
fetch-exons = "exon_protein_resolver.fetch_isoforms_hs:main"

